# projeto-pangeia

./: .gitignore  README.md  pangeia_mcp_config.json  pyproject.toml  requirements.txt
pangeia/: analyst.py  mcp_server.py  simulation.py
pangeia/agents/: __init__.py  conservative.py  journalist.py  moltbook.py  philosopher.py  teacher.py
pangeia/api/: schemas.py  server.py
pangeia/core/: agent.py  collective_memory.py  communication.py  memory.py  psychology.py  world.py
pangeia/culture/: emergent_ideology.py  ideology_manager.py  religion.py
pangeia/engine/: simulation_worker.py
pangeia/experiments/: __init__.py  ablation.py
pangeia/external_agents/: protocol.py
pangeia/governance/: government.py
pangeia/persistence/: recorder.py
pangeia/technology/: tech_tree.py
tests/: conftest.py  test_analyst.py  test_conservative.py  test_determinism.py  test_emergent_ideologies.py  test_integration_tick.py  test_mcp_server.py  test_snapshots.py
tests/core/: test_agent.py  test_collective_memory.py  test_psychology.py
tests/culture/: test_religion.py
tests/economy/: test_market.py
tests/governance/: test_government.py
tests/technology/: test_tech_tree.py
